--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,6 +15,10 @@ img:hover{
 .autor{
     font-style: italic;
 }
+p{
+    line-height: 25px;
+    font-weight: 400;
+}
 /*fonte marcellus*/
 .marcellus-regular {
     font-family: "Marcellus", serif;
@@ -26,7 +30,7 @@ span.destaque{
     text-align: center ;
     font-weight: bolder;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 50px;
     color: rgb(241, 183, 35);
     margin:50px 0;
 }
@@ -190,6 +194,9 @@ span.destaque{
 
 /* Sobre*/
 .sobre{
+    border: 1px solid rgba(0, 0, 0, 0.075);
+    border-radius: 40px;
+    padding: 20px;
     width: 70vw;
     display: flex;
     margin: 100px auto;
